# babel-ai

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
analysis/: pdf_generation.py
configs/: test_config.yaml
doc/: architecture.py  contributing.md  how_to_run_experiments.md
notebooks/: bayesian_surprise.ipynb  conversation_to_theater_script.ipynb  drift_analyzer_test.ipynb  drift_experiment_20250226_161528.csv  drift_experiment_20250226_162252.csv  drift_experiment_20250226_162650.csv  drift_experiment_20250226_162954.csv  drift_experiment_20250226_164805.csv  drift_experiment_20250226_165012.csv  drift_experiment_20250226_165932.csv  drift_experiment_results.csv  graphical_analysis.ipynb  initialize_raven_models.ipynb  test.ipynb  test_analyzer_non-sense_text.ipynb  test_bayes_surprise_perplexity.ipynb  test_perplexity.ipynb  test_semantic_repetition_metrics.ipynb
notebooks/dataset_analysis/: dataset_analysis.ipynb  dataset_serna_analysis.ipynb  infinite_conversation_analysis.ipynb
notebooks/extended_analysis/: llama_sharegpt_analysis.ipynb
notebooks/structured_analysis/: single_agent_setting_pivot.ipynb  test_run_experiment.ipynb
src/: main.py  utils.py
src/api/: anthropic.py  azure_openai.py  budget.py  enums.py  llm_interface.py  ollama.py  openai.py
src/babel_ai/: agent.py  analyzer.py  enums.py  (+8 more)
tests/: test_analyzer.py  test_azure_openai.py  test_infinite_conversation_prompt_fetcher.py  test_llm_drift.py  test_llm_interface.py  test_models.py  test_openai.py  test_prompt_fetcher.py  test_sharegpt_prompt_fetcher.py
(+40 files in other folders)
